
* LP#1341964: The soupparser now handles DOCTYPE declarations, comments
  and processing instructions outside of the root element.
  Patch by Olli Pottonen.

* LP#1421512: The ``docinfo`` of a tree was made editable to allow
  setting and removing the public ID and system ID of the DOCTYPE.
  Patch by Olli Pottonen.

* LP#1442427: More work-arounds for quirks and bugs in pypy and pypy3.

Bugs fixed
----------

* Memory errors that occur during tree adaptations (e.g. moving subtrees
  to foreign documents) could leave the tree in a crash prone state.

* Calling ``process_children()`` in an XSLT extension element without
  an ``output_parent`` argument failed with a ``TypeError``.
  Fix by Jens Tröger.

* GH#159: Validity checks for names and string content were tightened
  to detect the use of illegal characters early.  Patch by Olli Pottonen.

* LP#1421921: Comments/PIs before the DOCTYPE declaration were not
  serialised.  Patch by Olli Pottonen.

* LP#659367: Some HTML DOCTYPE declarations were not serialised.
  Patch by Olli Pottonen.

* LP#1238503: lxml.doctestcompare is now consistent with stdlib's doctest
  in how it uses ``+`` and ``-`` to refer to unexpected and missing output.

* Empty prefixes are explicitly rejected when a namespace mapping is used
  with ElementPath to avoid hiding bugs in user code.

* Several problems with PyPy were fixed by switching to Cython 0.23.


3.4.4 (2015-04-25)
==================

Bugs fixed
----------

* An ElementTree compatibility test added in lxml 3.4.3 that failed in
  Python 3.4+ was removed again.


3.4.3 (2015-04-15)
==================

Bugs fixed
----------

* Expression cache in ElementPath was ignored.  Fix by Changaco.

* LP#1426868: Passing a default namespace and a prefixed namespace mapping
  as nsmap into ``xmlfile.element()`` raised a ``TypeError``.

* LP#1421927: DOCTYPE system URLs were incorrectly quoted when containing
  double quotes.  Patch by Olli Pottonen.
